jpa auditing and onetoone mapping changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=RelationsOneToOne
+##############################
+# Spring Data JPA Properties #
+##############################
+spring.datasource.url=jdbc:mysql://localhost:3306/mydb?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=root
+#All the properties below are optional
+#spring can automatically detect the driver class name based on the URL, so you can comment this line out
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver 
+#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+#spring can automatically detect the driver class name based on the URL
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
